<resources>
    <string name="app_name">Ribbit</string>
    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="menu_logout_label">Logout</string>
    <string name="menu_edit_friends_label">Edit Friends</string>
    <string name="menu_camera_label">Camera</string>
    <string name="title_activity_login">Login</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="login_button_label">SIGN IN</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="email_hint">Email Address</string>
    <string name="sign_up_button_label">Sign Up!</string>
    <string name="sign_up_error_message">Please make sure you enter a username, password, and email address!</string>
    <string name="sign_up_password_error_message">Please make sure passwords match!</string>
    <string name="sign_up_error_title">Oops!</string>
    <string name="login_error_message">Please make sure you enter a username and password!</string>
    <string name="login_error_title">Oops!</string>
    <string name="sign_up_forgot_password">Forgot Password?</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="action_settings">Settings</string>
    <string name="forgot_password_enter_email">Enter email address to get a reset email</string>
    <string name="forgot_password_send_email_button">SEND EMAIL</string>
    <string name="empty_inbox_label">No new messages...</string>
    <string name="empty_friends_label">Add friends to begin...</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="error_title">We\'re sorry!</string>
    <string name="error_external_storage">There was a problem accessing your device\'s external storage</string>
    <string name="general_error">Sorry, there was an error!</string>
    <string name="video_file_size_warning">The selected video must be less than 10 MB</string>
    <string name="error_opening_file">There was a problem with the selected file</string>
    <string name="error_file_size_too_large">The selected file is too large! Select a new file.</string>
    <string-array name="camera_choices">
        <item>"Take Picture"</item>
        <item>"Take Video"</item>
        <item>"Choose Picture"</item>
        <item>"Choose Video"</item>
    </string-array>
        <string name="title_activity_recepients">Choose Recepients</string>

    <string name="hello_world">Hello world!</string>
    <string name="empty_recipients_list_label">You have no friends :(</string>
    <string name="menu_send_label">Send</string>
    <string name="error_selecting_file">There as an error with the file selected. Please select a different file.</string>
    <string name="error_selecting_file_title">We\'re sorry</string>
    <string name="success_message">Message sent!</string>
    <string name="error_sending_message">There was an error sending your message. Please try again.</string>
        <string name="title_activity_view_image">Ribbit</string>
        <string name="title_activity_recipients">Recipients</string>
    <string name="content_desc_background">Ribbit Frog Background Image</string>
    <string name="subtitle">An app by Pablo</string>
    <string name="sign_up_button_text">SIGN UP</string>
    <string name="cancel_button_label">CANCEL</string>
    <string name="content_desc_button_divider">Button divider</string>
    <string name="message_icon">Message icon</string>
    <string name="user_avatar">User avatar</string>
    <string name="user_checkmark">user_checkmark</string>
    <string name="push_message">"You have a new Ribbit message from "</string>
</resources>
