<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/AuthBackground">
                tools:context=".SignUpActivity">

    <include layout="@layout/auth_common"/>

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFieldContainer">

        <EditText
            android:id="@+id/usernameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint">
        <requestFocus/>
        </EditText>

        <EditText
            android:id="@+id/passwordField"
            android:layout_below="@+id/usernameField"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            style="@style/EditTextTheme"/>

        <EditText
            android:id="@+id/passwordConfirmField"
            android:layout_below="@+id/passwordField"
            android:hint="@string/confirm_password_hint"
            android:inputType="textPassword"
            style="@style/EditTextTheme"/>

        <EditText
            android:id="@+id/emailField"
            style="@style/EditTextTheme"
            android:layout_below="@+id/passwordConfirmField"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"/>

    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextLayout"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        tools:showIn="@layout/activity_sign_up">

        <Button
            android:id="@+id/signUpButton"
            android:text="@string/sign_up_button_text"
            style="@style/ButtonTheme"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/buttonDivider"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:src="@drawable/button_divider"
            android:contentDescription="@string/content_desc_button_divider"/>

        <Button
            android:id="@+id/cancelButton"
            android:text="@string/cancel_button_label"
            style="@style/ButtonTheme"
            android:layout_weight="1"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"/>

</RelativeLayout>
