<RelativeLayout
    style="@style/AuthBackground"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <include layout="@layout/auth_common"/>

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFieldContainer">

        <EditText
            android:id="@+id/emailField"
            style="@style/EditTextTheme"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress">

            <requestFocus/>
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonLayout"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextLayout"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        tools:showIn="@layout/activity_sign_up">

        <Button
            android:id="@+id/sendEmailButton"
            style="@style/ButtonTheme"
            android:layout_weight="1"
            android:text="@string/sign_up_button_text"/>

        <ImageView
            android:id="@+id/buttonDivider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:contentDescription="@string/content_desc_button_divider"
            android:src="@drawable/button_divider"/>

        <Button
            android:id="@+id/cancelButton"
            style="@style/ButtonTheme"
            android:layout_weight="1"
            android:text="@string/cancel_button_label"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"/>

</RelativeLayout>
